# micropython-home-assistant

./: LICENSE  README.md  pyproject.toml
examples/: binary_sensor.py  light.py  switch.py
mha/: __init__.py  ha_device.py  ha_mqtt.py
mha/devices/: basic_device.py  binary_sensor.py  light.py  switch.py
mha/umqtt/: __init__.py
mha/utils/: constants.py  serializer.py
