# SPDX-FileCopyrightText: Copyright (c) 2024 lbuque
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "micropython-home-assistant"
description = "Home Assistant MQTT integration for MicroPython"
version = "0.1.0"
readme = "README.md"
authors = [
    {name = "lbuque", email = "1102390310@qq.com"}
]
urls = {Homepage = "https://github.com/lbuque/micropython-home-assistant"}
keywords = [
    "micropython",
    "home-assistant",
    "MQTT"
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
# dynamic = ["dependencies"]

[tool.setuptools]
packages = ["mha"]

# [tool.setuptools.dynamic]
# dependencies = {file = ["requirements.txt"]}
